--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.retrofit_version = '2.4.0'
+    ext.dagger_version = '2.16'
+
     repositories {
         google()
         jcenter()
